fix: add overflow-x-hidden class to prevent horizontal scrolling in App component

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@
 /* stylelint-enable at-rule-no-unknown */
 
 /* @layer base {
-  html {
-    @apply font-sans;
+
+  html,
+  body {
+    @apply .overflow-x-hidden;
   }
 } */
 
